# dylan-harle-ttb-label-verification

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  .gitignore  pyproject.toml  vercel.json
backend/api/: index.py
backend/app/: comparison.py  models.py  vision.py
backend/scripts/: check_vision_model.py  extract_label.py  phase6_live_check.py
backend/tests/: test_comparison.py  test_deployment_contract.py  test_health.py  test_schema_contract.py  test_verify_batch_endpoint.py  test_verify_endpoint.py  test_vision.py
frontend/: package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  App.test.jsx  setupTests.js  styles.css
frontend/src/components/: BatchFlow.jsx  BatchResultsSection.jsx  FieldsSection.jsx  ResultRow.jsx  SingleFlow.jsx  SingleResultSection.jsx
frontend/src/lib/: display.js  formConfig.js  image.js
