[project]
name = "ttb-label-verification-backend"
version = "0.1.0"
description = "FastAPI backend for the TTB Label Verification proof of concept."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.117.1",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.14.5",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

